--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                 <!-- global-search-form -->
 
                 <form class="global-search-form" action="https://echo.htmlacademy.ru" method="get">
-                    <input class="global-search-form-input" aria-label="Поиск" type="search" name="search" placeholder="Поиск" required>
+                    <input class="global-search-form-input" aria-label="Поиск" type="search" name="search"
+                        placeholder="Поиск" required>
                 </form>
 
                 <!-- lang-toggle -->
@@ -55,6 +56,31 @@
 
             </div>
 
+        </div>
+        
+        <div class="container">
+            <!-- SITENAV -->
+            <nav class="sitenav">
+                <ul class="sitenav-list">
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Главное</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Интересное</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Экономика</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Политика</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Общество</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Технологии</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Спорт</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Культура</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Происшествия</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Наука</a></li>
+                </ul>
+            </nav>
+            <!-- SITE-HEADER-BANNER -->
+            <aside class="site-header-banner">
+                <a  class="site-header-banner-link" href="elmakon.uz">
+                    <img class="site-header-banner-img" src="img/shopme-banner.jpg" srcset="img/shopme-banner.jpg 1x, img/shopme-banner@2x.jpg 2x" alt="Elmakon shopme banner">
+                </a>
+            </aside>
+            
         </div>
     </header>
 
