Site header banner corrected

--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
                     <li class="sitenav-item"><a class="sitenav-link" href="#">Наука</a></li>
                 </ul>
             </nav>
+
             <!-- SITE-HEADER-BANNER -->
             <aside class="site-header-banner">
-                <a  class="site-header-banner-link" href="elmakon.uz">
-                    <img class="site-header-banner-img" src="img/shopme-banner.jpg" srcset="img/shopme-banner.jpg 1x, img/shopme-banner@2x.jpg 2x" alt="Elmakon shopme banner">
+                <a  class="site-header-banner-link" href="https://www.elmakon.uz" target="_blank">
+                    <img class="site-header-banner-img" src="img/shopme-banner.jpg" width="1200" height="128"                    
+                    srcset="img/shopme-banner.jpg 1x, img/shopme-banner@2x.jpg 2x" alt="Elmakon shopme banner">
                 </a>
             </aside>
             
