--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
 
         </div>
-        
+
         <div class="container">
             <!-- SITENAV -->
             <nav class="sitenav">
@@ -77,16 +77,142 @@
 
             <!-- SITE-HEADER-BANNER -->
             <aside class="site-header-banner">
-                <a  class="site-header-banner-link" href="https://www.elmakon.uz" target="_blank">
-                    <img class="site-header-banner-img" src="img/shopme-banner.jpg" width="1200" height="128"                    
-                    srcset="img/shopme-banner.jpg 1x, img/shopme-banner@2x.jpg 2x" alt="Elmakon shopme banner">
+                <a class="site-header-banner-link" href="https://www.elmakon.uz" target="_blank">
+                    <img class="site-header-banner-img" src="img/shopme-banner.jpg" width="1200" height="128"
+                        srcset="img/shopme-banner.jpg 1x, img/shopme-banner@2x.jpg 2x" alt="Elmakon shopme banner">
                 </a>
             </aside>
-            
+
         </div>
     </header>
 
+    <!-- MAIN CONTENT -->
+    <main class="main-content">
+        <div class="container">
+            <!-- <h1>Namanganliklar N24 News Website</h1> -->
 
+            <!-- Top News -->
+            <section class="top-news">
+                <!-- <h2>Top News </h2> -->
+
+                <!-- News grid -->
+
+                <div class="news-grid">
+                    <!-- News grid item -->
+                    <article class="news-grid-item article-card">
+                        <h3 class="article-card-title">
+                            <a class="article-card-link" href="#">Кандидат на пост канцлера ФРГ Шольц назвал условия
+                                коалиционного соглашения</a>
+                        </h3>
+                        <p class="article-card-text">Лидер Социал-демократической партии Германии (СДПГ) и кандидат на
+                            должность...</p>
+                        <img class="article-card-img" src="img/new-grid/german-flag.jpg" alt="German flag" width="360"
+                            height="165" srcset="img/new-grid/german-flag.jpg 1x, img/new-grid/german-flag@2x.jpg 2x">
+                        <footer class="article-card-footer">
+                            <img class="article-card-source-icon" src="img/new-grid/source/krasnaya-vesna.png" alt="" width="20" height="20">
+                            <div class="article-card-source-time">
+                                <span class="article-card-source">ИА Красная Весна</span>
+                                <time class="article-card-time">15:55</time>
+                            </div>
+                        </footer>
+                    </article>
+
+                    <article class="news-grid-item article-card">
+                        <h3 class="article-card-title">
+                            <a class="article-card-link" href="#">Ученые доказали экспериментальным путем пользу
+                                покровных культур</a>
+                        </h3>
+                        <p class="article-card-text">Новое исследование ученых университета Иллинойса объединяет полевые
+                            данные... </p>
+                        <img class="article-card-img" src="img/new-grid/wheat.jpg" alt="Wheat plant" width="360"
+                            height="165" srcset="img/new-grid/wheat.jpg 1x, img/new-grid/wheat@2x.jpg 2x">
+                        <footer class="article-card-footer">
+                            <img class="article-card-source-icon" src="img/new-grid/source/gazeta.png" alt="" width="20" height="20">
+                            <div class="article-card-source-time">
+                                <span class="article-card-source">Газета.Ru</span>
+                                <time class="article-card-time">12:54</time>
+                            </div>
+                        </footer>
+                    </article>
+
+                    <article class="news-grid-item article-card">
+                        <h3 class="article-card-title">
+                            <a class="article-card-link" href="#">Baidu запустила публичный сервис роботакси Apollo Go в
+                                Шанхае</a>
+                        </h3>
+                        <p class="article-card-text">Автопарк Baidu состоит из модифицированных электромобилей EV...
+                        </p>
+                        <img class="article-card-img" src="img/new-grid/baido-car.jpg" alt="Baido car taxi" width="360"
+                            height="165" srcset="img/new-grid/baido-car.jpg 1x, img/new-grid/baido-car@2x.jpg 2x">
+                        <footer class="article-card-footer">
+                            <img class="article-card-source-icon" src="img/new-grid/source/haytek.png" alt="" width="20" height="20">
+                            <div class="article-card-source-time">
+                                <span class="article-card-source">Хайтек+</span>
+                                <time class="article-card-time">13:44</time>
+                            </div>
+                        </footer>
+                    </article>
+
+                    <article class="news-grid-item article-card">
+                        <h3 class="article-card-title">
+                            <a class="article-card-link" href="#">Стали известны ёмкости аккумуляторов всех моделей
+                                iPhone 13</a>
+                        </h3>
+                        <p class="article-card-text">Во время презентации iPhone 13 Apple придала большое значения...
+                        </p>
+                        <img class="article-card-img" src="img/new-grid/iphone13.jpg" alt="Iphone 13" width="360"
+                            height="165" srcset="img/new-grid/iphone13.jpg 1x, img/new-grid/iphone13@2x.jpg 2x">
+                        <footer class="article-card-footer">
+                            <img class="article-card-source-icon" src="img/new-grid/source/digger.png" alt="" width="20" height="20">
+                            <div class="article-card-source-time">
+                                <span class="article-card-source">Digger.ru</span>
+                                <time class="article-card-time">14:25</time>
+                            </div>
+                        </footer>
+                    </article>
+
+                    <article class="news-grid-item article-card">
+                        <h3 class="article-card-title">
+                            <a class="article-card-link" href="#">Nature: ученые смогли доказать природное происхождение
+                                коронавируса SARS-CoV-2</a>
+                        </h3>
+                        <p class="article-card-text">Во время презентации iPhone 13 Apple придала большое значение...
+                        </p>
+                        <img class="article-card-img" src="img/new-grid/sars-cov-2.jpg" alt="Sars cov 2" width="360"
+                            height="165" srcset="img/new-grid/sars-cov-2.jpg 1x, img/new-grid/sars-cov-2@2x.jpg 2x">
+                        <footer class="article-card-footer">
+                            <img class="article-card-source-icon" src="img/new-grid/source/lenta.png" alt="" width="20" height="20">
+                            <div class="article-card-source-time">
+                                <span class="article-card-source">Lenta.ru</span>
+                                <time class="article-card-time">10:54</time>
+                            </div>
+                        </footer>
+                    </article>
+
+                    <article class="news-grid-item article-card">
+                        <h3 class="article-card-title">
+                            <a class="article-card-link" href="#">Китайская марка JAC повысила цены на лифтбек и пикап в
+                                России</a>
+                        </h3>
+                        <p class="article-card-text">Две модели китайского бренда JAC из пяти, представленных на
+                            российском...
+                        </p>
+                        <img class="article-card-img" src="img/new-grid/jac-car.jpg" alt="Jac car" width="360"
+                            height="165" srcset="img/new-grid/jac-car.jpg 1x, img/new-grid/jac-car@2x.jpg 2x">
+                        <footer class="article-card-footer">
+                            <img class="article-card-source-icon" src="img/new-grid/source/tarantas.png" alt="" width="20" height="20">
+                            <div class="article-card-source-time">
+                                <span class="article-card-source">Тарантас Ньюс</span>
+                                <time class="article-card-time">10:44</time>
+                            </div>
+                        </footer>
+                    </article>
+
+                </div>
+            </section>
+
+        </div>
+    </main>
 </body>
 
 </html>
