.article-card-horizontal padding corrected

--- a/index.html
+++ b/index.html
@@ -222,8 +222,9 @@
                 <div class="notification-cta-text">Хотите быть в курсе свежих новостей? <br> Включите уведомления!
                 </div>
                 <button class="button button-orange" type="button">Включит</button>
-
             </section>
+
+            <!-- LAYOUT-2-1 -->
 
             <div class="layout-2-1">
                 <div class="layout-2-1-main">
