Added site-footer section and elements

--- a/index.html
+++ b/index.html
@@ -404,7 +404,8 @@
                     <!-- Sidebar-ad -->
                     <aside class="layout-2-1-sidebar-item sidebar-ad">
                         <a href="https://www.nestone.uz" class="sidebar-ad-link" target="_blank">
-                            <img class="sidebar-add-img" src="img/aside/olmos.jpg" srcset="img/aside/olmos.jpg 1x, img/aside/olmos@2x.jpg 2x" alt="Olmos yangi uylar"
+                            <img class="sidebar-add-img" src="img/aside/olmos.jpg"
+                                srcset="img/aside/olmos.jpg 1x, img/aside/olmos@2x.jpg 2x" alt="Olmos yangi uylar"
                                 width="393" height="338">
                         </a>
                     </aside>
@@ -412,6 +413,66 @@
             </div>
         </div>
     </main>
+
+    <!-- SITE-FOOTER -->
+    <footer class="site-footer">
+        <div class="container">
+            <div class="site-footer-logo-wrapper">
+                <a href="index.html" class="site-footer-logo">
+                    <img class="site-footer-logo-img" src="img/logo-white.svg" alt="N24 sayti logosi" width="264"
+                        height="28">
+                </a>
+            </div>
+            <div class="site-footer-about-links">
+                <div class="site-footer-about">
+                    Воспроизводство, копирование, использование информации с сайта «NAMANGANLIKLAR24.UZ» возможно только
+                    с предварительного письменного разрешения редакции.
+                </div>
+                <div class="site-footer-links-wrapper">
+                    <ul class="site-footer-links">
+                        <li class="site-footer-links-item"><a href="#" class="site-footer-link">Информация о сайте</a>
+                        </li>
+                        <li class="site-footer-links-item"><a class="site-footer-link" href="#">Напишите нам</a></li>
+                        <li class="site-footer-links-item"><a class="site-footer-link" href="#">Реклама</a></li>
+                        <li class="site-footer-links-item"><a class="site-footer-link" href="#">Прислать новость</a>
+                        </li>
+                    </ul>
+
+                    <ul class="site-footer-links">
+                        <li class="site-footer-links-item"><a href="#" class="site-footer-link">Использование
+                                материалов</a>
+                        </li>
+                        <li class="site-footer-links-item"><a class="site-footer-link" href="#">Темы дня</a></li>
+                        <li class="site-footer-links-item"><a class="site-footer-link" href="#">Наша команда
+                            </a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- divider -->
+            <hr class="site-footer-divider">
+            <div class="site-footer-socials">
+                <h2 class="site-footer-heading">Наши социальные сети</h2>
+                <ul class="site-footer-socials-list">
+                    <li class="site-footer-socials-list-item"><a href="#" class="site-footer-socials-link" target="_blank">
+                            <img class="site-footer-socials-img" src="img/site-footer/icon-facebook.svg" width="25"
+                                height="25" alt="Facebook sahifasi">
+                        </a></li>
+                    <li class="site-footer-socials-list-item"><a href="#" class="site-footer-socials-link" target="_blank">
+                            <img class="site-footer-socials-img" src="img/site-footer/icon-instagram.svg" width="25"
+                                height="25" alt="Instagram sahifasi">
+                        </a></li>
+                    <li class="site-footer-socials-list-item"><a href="#" class="site-footer-socials-link" target="_blank">
+                            <img class="site-footer-socials-img" src="img/site-footer/icon-telegram.svg" width="25"
+                                height="25" alt="Telegram sahifasi">
+                        </a></li>
+                    <li class="site-footer-socials-list-item"><a href="#" class="site-footer-socials-link" target="_blank">
+                            <img class="site-footer-socials-img" src="img/site-footer/icon-youtube.svg" width="25"
+                                height="25" alt="Youtube sahifasi">
+                        </a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
