Added news list html file

--- a/news.-list.html
+++ b/news.-list.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>N24 sayti amaliyoti - Qaytadan</title>
+    <title>N24 - Yangiliklar</title>
 
     <!-- styles -->
     <link rel="stylesheet" href="css/normalize.css">
@@ -64,7 +64,7 @@
                 <ul class="sitenav-list">
                     <li class="sitenav-item"><a class="sitenav-link" href="index.html">Главное</a></li>
                     <li class="sitenav-item"><a class="sitenav-link" href="news.-list.html">Интересное</a></li>
-                    <li class="sitenav-item"><a class="sitenav-link" href="news.-list.html  ">Экономика</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="news.-list.html">Экономика</a></li>
                     <li class="sitenav-item"><a class="sitenav-link" href="news.-list.html">Политика</a></li>
                     <li class="sitenav-item"><a class="sitenav-link" href="news.-list.html">Общество</a></li>
                     <li class="sitenav-item"><a class="sitenav-link" href="news.-list.html">Технологии</a></li>
@@ -89,143 +89,6 @@
     <!-- MAIN CONTENT -->
     <main class="main-content">
         <div class="container">
-            <!-- <h1>Namanganliklar N24 News Website</h1> -->
-
-            <!-- Top News -->
-            <section class="top-news">
-                <!-- <h2>Top News </h2> -->
-
-                <!-- News grid -->
-
-                <div class="news-grid">
-                    <!-- News grid item -->
-                    <article class="news-grid-item article-card">
-                        <h3 class="article-card-title">
-                            <a class="article-card-link" href="#">Кандидат на пост канцлера ФРГ Шольц назвал условия
-                                коалиционного соглашения</a>
-                        </h3>
-                        <p class="article-card-text">Лидер Социал-демократической партии Германии (СДПГ) и кандидат на
-                            должность...</p>
-                        <img class="article-card-img" src="img/new-grid/german-flag.jpg" alt="German flag" width="360"
-                            height="165" srcset="img/new-grid/german-flag.jpg 1x, img/new-grid/german-flag@2x.jpg 2x">
-                        <footer class="article-card-footer">
-                            <img class="article-card-source-icon" src="img/new-grid/source/krasnaya-vesna.png" alt=""
-                                width="20" height="20">
-                            <div class="article-card-source-time">
-                                <span class="article-card-source">ИА Красная Весна</span>
-                                <time class="article-card-time">15:55</time>
-                            </div>
-                        </footer>
-                    </article>
-
-                    <article class="news-grid-item article-card">
-                        <h3 class="article-card-title">
-                            <a class="article-card-link" href="#">Ученые доказали экспериментальным путем пользу
-                                покровных культур</a>
-                        </h3>
-                        <p class="article-card-text">Новое исследование ученых университета Иллинойса объединяет полевые
-                            данные... </p>
-                        <img class="article-card-img" src="img/new-grid/wheat.jpg" alt="Wheat plant" width="360"
-                            height="165" srcset="img/new-grid/wheat.jpg 1x, img/new-grid/wheat@2x.jpg 2x">
-                        <footer class="article-card-footer">
-                            <img class="article-card-source-icon" src="img/new-grid/source/gazeta.png" alt="" width="20"
-                                height="20">
-                            <div class="article-card-source-time">
-                                <span class="article-card-source">Газета.Ru</span>
-                                <time class="article-card-time">12:54</time>
-                            </div>
-                        </footer>
-                    </article>
-
-                    <article class="news-grid-item article-card">
-                        <h3 class="article-card-title">
-                            <a class="article-card-link" href="#">Baidu запустила публичный сервис роботакси Apollo Go в
-                                Шанхае</a>
-                        </h3>
-                        <p class="article-card-text">Автопарк Baidu состоит из модифицированных электромобилей EV...
-                        </p>
-                        <img class="article-card-img" src="img/new-grid/baido-car.jpg" alt="Baido car taxi" width="360"
-                            height="165" srcset="img/new-grid/baido-car.jpg 1x, img/new-grid/baido-car@2x.jpg 2x">
-                        <footer class="article-card-footer">
-                            <img class="article-card-source-icon" src="img/new-grid/source/haytek.png" alt="" width="20"
-                                height="20">
-                            <div class="article-card-source-time">
-                                <span class="article-card-source">Хайтек+</span>
-                                <time class="article-card-time">13:44</time>
-                            </div>
-                        </footer>
-                    </article>
-
-                    <article class="news-grid-item article-card">
-                        <h3 class="article-card-title">
-                            <a class="article-card-link" href="#">Стали известны ёмкости аккумуляторов всех моделей
-                                iPhone 13</a>
-                        </h3>
-                        <p class="article-card-text">Во время презентации iPhone 13 Apple придала большое значения...
-                        </p>
-                        <img class="article-card-img" src="img/new-grid/iphone13.jpg" alt="Iphone 13" width="360"
-                            height="165" srcset="img/new-grid/iphone13.jpg 1x, img/new-grid/iphone13@2x.jpg 2x">
-                        <footer class="article-card-footer">
-                            <img class="article-card-source-icon" src="img/new-grid/source/digger.png" alt="" width="20"
-                                height="20">
-                            <div class="article-card-source-time">
-                                <span class="article-card-source">Digger.ru</span>
-                                <time class="article-card-time">14:25</time>
-                            </div>
-                        </footer>
-                    </article>
-
-                    <article class="news-grid-item article-card">
-                        <h3 class="article-card-title">
-                            <a class="article-card-link" href="#">Nature: ученые смогли доказать природное происхождение
-                                коронавируса SARS-CoV-2</a>
-                        </h3>
-                        <p class="article-card-text">Во время презентации iPhone 13 Apple придала большое значение...
-                        </p>
-                        <img class="article-card-img" src="img/new-grid/sars-cov-2.jpg" alt="Sars cov 2" width="360"
-                            height="165" srcset="img/new-grid/sars-cov-2.jpg 1x, img/new-grid/sars-cov-2@2x.jpg 2x">
-                        <footer class="article-card-footer">
-                            <img class="article-card-source-icon" src="img/new-grid/source/lenta.png" alt="" width="20"
-                                height="20">
-                            <div class="article-card-source-time">
-                                <span class="article-card-source">Lenta.ru</span>
-                                <time class="article-card-time">10:54</time>
-                            </div>
-                        </footer>
-                    </article>
-
-                    <article class="news-grid-item article-card">
-                        <h3 class="article-card-title">
-                            <a class="article-card-link" href="#">Китайская марка JAC повысила цены на лифтбек и пикап в
-                                России</a>
-                        </h3>
-                        <p class="article-card-text">Две модели китайского бренда JAC из пяти, представленных на
-                            российском...
-                        </p>
-                        <img class="article-card-img" src="img/new-grid/jac-car.jpg" alt="Jac car" width="360"
-                            height="165" srcset="img/new-grid/jac-car.jpg 1x, img/new-grid/jac-car@2x.jpg 2x">
-                        <footer class="article-card-footer">
-                            <img class="article-card-source-icon" src="img/new-grid/source/tarantas.png" alt=""
-                                width="20" height="20">
-                            <div class="article-card-source-time">
-                                <span class="article-card-source">Тарантас Ньюс</span>
-                                <time class="article-card-time">10:44</time>
-                            </div>
-                        </footer>
-                    </article>
-
-                </div>
-            </section>
-
-            <!-- NOTIFICATION CTA -->
-            <section class="notification-cta">
-                <div class="notification-cta-text">Хотите быть в курсе свежих новостей? <br> Включите уведомления!
-                </div>
-                <button class="button button-orange" type="button">Включит</button>
-            </section>
-
-            <!-- LAYOUT-2-1 -->
-
             <div class="layout-2-1">
                 <div class="layout-2-1-main">
                     <!-- GLOBAL NEWS -->
@@ -411,6 +274,7 @@
                     </aside>
                 </div>
             </div>
+
         </div>
     </main>
 
@@ -453,19 +317,23 @@
             <div class="site-footer-socials">
                 <h2 class="site-footer-heading">Наши социальные сети</h2>
                 <ul class="site-footer-socials-list">
-                    <li class="site-footer-socials-list-item"><a href="#" class="site-footer-socials-link" target="_blank">
+                    <li class="site-footer-socials-list-item"><a href="#" class="site-footer-socials-link"
+                            target="_blank">
                             <img class="site-footer-socials-img" src="img/site-footer/icon-facebook.svg" width="25"
                                 height="25" alt="Facebook sahifasi">
                         </a></li>
-                    <li class="site-footer-socials-list-item"><a href="#" class="site-footer-socials-link" target="_blank">
+                    <li class="site-footer-socials-list-item"><a href="#" class="site-footer-socials-link"
+                            target="_blank">
                             <img class="site-footer-socials-img" src="img/site-footer/icon-instagram.svg" width="25"
                                 height="25" alt="Instagram sahifasi">
                         </a></li>
-                    <li class="site-footer-socials-list-item"><a href="#" class="site-footer-socials-link" target="_blank">
+                    <li class="site-footer-socials-list-item"><a href="#" class="site-footer-socials-link"
+                            target="_blank">
                             <img class="site-footer-socials-img" src="img/site-footer/icon-telegram.svg" width="25"
                                 height="25" alt="Telegram sahifasi">
                         </a></li>
-                    <li class="site-footer-socials-list-item"><a href="#" class="site-footer-socials-link" target="_blank">
+                    <li class="site-footer-socials-list-item"><a href="#" class="site-footer-socials-link"
+                            target="_blank">
                             <img class="site-footer-socials-img" src="img/site-footer/icon-youtube.svg" width="25"
                                 height="25" alt="Youtube sahifasi">
                         </a></li>
