News-list.html files added

--- a/news.-list.html
+++ b/news.-list.html
@@ -77,9 +77,9 @@
 
             <!-- SITE-HEADER-BANNER -->
             <aside class="site-header-banner">
-                <a class="site-header-banner-link" href="https://www.elmakon.uz" target="_blank">
-                    <img class="site-header-banner-img" src="img/shopme-banner.jpg" width="1200" height="128"
-                        srcset="img/shopme-banner.jpg 1x, img/shopme-banner@2x.jpg 2x" alt="Elmakon shopme banner">
+                <a class="site-header-banner-link" href="https://www.nestone.uz" target="_blank">
+                    <img class="site-header-banner-img" src="img/news-list/news-list-banner.jpg" width="1200" height="128"
+                        srcset="img/news-list/news-list-banner.jpg 1x, img/news-list/news-list-banner@2x.jpg 2x" alt="Yangi uylar banner">
                 </a>
             </aside>
 
@@ -267,9 +267,9 @@
                     <!-- Sidebar-ad -->
                     <aside class="layout-2-1-sidebar-item sidebar-ad">
                         <a href="https://www.nestone.uz" class="sidebar-ad-link" target="_blank">
-                            <img class="sidebar-add-img" src="img/aside/olmos.jpg"
-                                srcset="img/aside/olmos.jpg 1x, img/aside/olmos@2x.jpg 2x" alt="Olmos yangi uylar"
-                                width="393" height="338">
+                            <img class="sidebar-add-img sidebar-add-img-big" src="img/news-list/sidebar-img/olmos.jpg"
+                                srcset="img/news-list/sidebar-img/olmos.jpg 1x, img/news-list/sidebar-img/olmos@2x.jpg 2x" alt="Olmos yangi uylar"
+                                width="393" height="553">
                         </a>
                     </aside>
                 </div>
